# priv-ospvconfig

./: README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.yaml  main.rs
crates/schemas/: Cargo.toml  build.rs
crates/schemas/definitions/: ospv.json  spvconfig.json
crates/schemas/src/: extend.rs  io.rs  lib.rs  spv_validate.rs
crates/spv_to_ospv/: Cargo.toml
crates/spv_to_ospv/src/: builder.rs  consumer.rs  decoration.rs  lib.rs  misc.rs  types.rs
